--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.6.0
 async-timeout==4.0.2
 attrs==22.2.0
 charset-normalizer==2.1.1
+decorator==5.1.1
 Django==4.1.6
 frozenlist==1.3.3
 idna==3.4
@@ -11,4 +12,5 @@ multidict==6.0.4
 python-dotenv==0.21.1
 sqlparse==0.4.3
 tzdata==2022.7
+validators==0.20.0
 yarl==1.8.2
